fixing issue with menu overlapping messages

--- a/themes/curise/scss/rise-styles.scss
+++ b/themes/curise/scss/rise-styles.scss
@@ -1,5 +1,11 @@
 @import "../../ucb/scss/modules/_colors.scss";
 @import "../../ucb/scss/modules/_global.scss";
+
+
+.express-messages .express-message:first-child {
+  margin-top: 40px;
+}
+
 body {
   background-color: $gray-dark;
 }
